# email-liberator

./: .gitignore  Cargo.toml  README.md  autonomous_mail_client.toml  codecov.yml  enable_source_based_coverage.sh  run_grcov.sh
.github/: greenmail.crt
.github/actions-rs/: grcov.yml
.github/workflows/: build-and-test.yml  codecov.yml
config_parser/: autonomous_mail_client.toml  parser.py
example_scripts/: count_words.py  delete_political_spam.py  example_config.toml
src/: action.rs  args.rs  config.rs  email.rs  lib.rs  main.rs
src/binary_libs/: fetch_mail_libs.rs  fetcher.rs  fetcher_lib.rs  mod.rs
tests/: pipeline_test.rs  test_act_on_mail.rs  test_config.toml  test_core_lib.rs  test_echo.py  test_execute.rs  test_fetcher.rs  test_mail_fetch.rs  test_shared_lib.rs  utils.rs
tests/utils/: mod.rs
