[package]
name = "mail_client"
version = "0.1.0"
edition = "2021"
authors = ["Crispin Stichart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0.59"
clap = { version = "3.1.6", features = ["derive"] }
which = "4.2.4"
rustls = "0.20.4"
imap = "3.0.0-alpha.6"

# [dependencies.imap]
# version = "3.0.0-alpha.6"
# default-features = false
# feature = "rustls-tls"