[package]
name = "mail_client"
version = "0.1.0"
edition = "2021"
authors = ["Crispin Stichart"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json ="1.0.59"
clap = { version = "3.1.6", features = ["derive"] }
which = "4.2.4"
imap = "3.0.0-alpha.6"
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }

# actually dev dependencies but need them for the test email binary which should probably be elsewhere
lettre = "0.9.2"
lettre_email = "0.9.2"
native-tls = "0.2.8"
imap-proto = "0.15.0"


[dev-dependencies]
assert_cmd = "2.0.4"
duct = "0.13.5"
uuid = { version = "0.8", features = ["v4"] }
libc = "0.2.121"
